# agent-usage

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent-usage-preview/: README.md
dashboard-ui/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard-ui/src/: App.tsx  i18n.ts  index.css  theme.css
docs/: 2026-07-18-agent-usage-specification.md  multi-device.md  privacy.md  troubleshooting.md
docs/plans/: 2026-07-18-agent-usage-implementation-plan.md
scripts/: build_profile_dashboard.py
src/agent_usage/: aggregate.py  cli.py  config.py  models.py  privacy.py  public_data.py  time_window.py
src/tomax/: __init__.py  aggregate.py  cli.py  config.py  models.py  privacy.py  public_data.py  time_window.py
templates/: github-workflow.yml  profile-readme.md
tests/: conftest.py  test_aggregate.py  test_config.py  test_models.py  test_privacy.py  test_public_data.py  test_release_docs.py  test_smoke.py  test_time_window.py  test_workflow_template.py
tests/adapters/: test_claude_code.py  test_codex.py  test_hermes.py
tests/commands/: test_cli.py  test_collect.py  test_dashboard_cli.py  test_doctor.py  test_init.py  test_publish.py  test_render.py  test_schedule.py
tests/dashboard/: test_export.py  test_payload.py  test_remote.py  test_server.py  test_ui_build.py
tests/fixtures/: claude_code_projects.py  codex_sessions.py  hermes_state.py
tests/ledger/: test_repository.py
tests/publish/: test_git.py
tests/render/: test_counters.py  test_svg.py  (+4 more)
tomax-preview/: README.md
(+108 files in other folders)
