[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-usage"
version = "0.1.0"
description = "A privacy-conscious macOS-first agent usage collector."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Agent Usage Contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "platformdirs>=4.10.1",
    "typer>=0.12",
]

[project.scripts]
agent-usage = "agent_usage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
